# ai-research-concierge

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  langgraph.json  pyproject.toml  pytest.ini
src/docmana/: __init__.py  api.py  graph.py  prompts.py  run.py  state.py  tools.py
tests/: conftest.py  test_graph.py  test_state.py  test_tools.py
